Fix alignments in Profile section
See Clickup tasks
https://app.clickup.com/t/2gwrd4w
https://app.clickup.com/t/2gwrd53
https://app.clickup.com/t/2gwte09

Also clean up commented-out items

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -112,6 +112,7 @@ body #buddypress:not(.round-avatars) .users-header #item-header-cover-image #ite
 	border-radius: 20%;
 	max-width: 42px;
 	}
+
 /* Groups */
 
 .single-item.groups .content-area {
@@ -179,10 +180,6 @@ nav#object-nav li.bfc-group-name-nav{
 	margin-block-end: 5px;
 }
 
-/* .bs-dropdown {
-	min-width: 100px;
- } */
- 
  #bbpress-forums#bbpress-forums .bs-forums-items.list-view .bs-dropdown-wrap .bs-dropdown-wrap-inner .bs-dropdown {
    width: 100px;
    z-index: 1000;
@@ -345,10 +342,6 @@ nav#object-nav li.bfc-group-name-nav{
 	margin: 0 auto 5px;
 	border-radius: 12px;
 }
-
-/* #member-group-list #members-intros .item-entry {
-	position: relative;
-} */
 
 .single-item.group-members .page-title {
 	font-size: 16px;
@@ -803,8 +796,14 @@ body.bp-nouveau.groups:not(.single-item) .group-subscription-div {
 	margin-bottom: 20px;
 }
 
+#buddypress #item-body .profile-header a.button {
+	margin-bottom: 0px;
+    margin-left: 21px;
+}
+
 #buddypress #item-body div.bp-profile-content table.profile-fields tr td {
 	padding-bottom: 4px;
+	padding-left: 12px;
 }
 
 .buddypress-wrap table.profile-fields td.data>p {
